# parametric

./: .gitignore  CHANGELOG.md  README.md  pr.md  pyproject.toml  requirements_dev.txt  test.py  timing.py  yaml_constructors.py
.github/workflows/: lint.yml  manual_release_pr.yml  manual_release_pr_update_files.py  manual_release_pr_update_pyproject.py  post_release_pr.yml  pr.yml  release.yml  release_pr.yml  tests.yml  update_version_for_release.yml
parametric/: __init__.py  _abstract_base_params.py  _base_params.py  _const.py  _context_manager.py  _field_eq_check.py  _helpers.py  _io.py  _msgpack.py  _process.py  _serializers.py  _type_node.py  _typehint_parsing.py  _typehints.py  _validate.py  _validate_freezable_typehint.py  _validate_immutable_typehint.py  _wrangle_type.py  main.py
parametric/_gui/: __init__.py  base.py  local_file_picker.py  test.py
parametrize/: main.py
release_utils/: update_pyproject.py
tests/: conftest.py  test_change_on_class_init.py  test_coercion.py  test_coercion_from_dumpable.py  test_coercion_from_python_object.py  test_coercion_from_str.py  test_coercion_relaxed.py  test_coercion_strict.py  test_complex_types.py  test_enum.py  test_eq.py  test_errors.py  test_freeze_errors.py  test_main.py  test_model_dump.py  test_msgpack.py  test_other_errors.py  test_outputs.py  test_override_context.py  test_overrides.py  test_property.py  test_type_errors.py  test_types.py  test_yaml.py  tmp_file_context.py
